<resources>
    <string name="app_name">Прямоугольный параллелепипед</string>
    <string name="caption_text">Стороны прямоугольного параллелепипеда</string>
    <string name="side_a_text">a = </string>
    <string name="side_b_text">b = </string>
    <string name="side_c_text">c = </string>
    <string name="get_solution_text">Найти</string>

    <string name="selected_item">Selected item:</string>
    <string-array name="calculate">
        <item>Сумма длины ребер</item>
        <item>Площадь поверхности</item>
        <item>Объем</item>
    </string-array>
</resources>