<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_text"/>
    <TextView
        android:id="@+id/main_tv_sideALabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/side_a_text"/>
    <EditText
        android:id="@+id/main_edt_sideA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/main_tv_sideBLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/side_b_text"/>
    <EditText
        android:id="@+id/main_edt_sideB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/main_tv_sideCLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/side_c_text"/>
    <EditText
        android:id="@+id/main_edt_sideC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/main_spn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/main_btn_getSolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_solution_text"/>
    <TextView
        android:id="@+id/main_tv_solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>